# CopperVM

./: .gitignore  CMakeLists.txt  LICENSE
app/: Copper.cpp  copper.cpp
cu/: Copper.cpp
include/: Bytecode.h  Colors.h  Compiler.h  Disassembler.h  Object.h  Parser.h  Token.h  Tokenizer.h  TranslationUnit.h  VM.h  Value.h
libcurt/: CMakeLists.txt
libcurt/include/: Bytecode.h  Colors.h  Compiler.h  Disassembler.h  Environment.h  LocationInfo.h  Object.h  Parser.h  Token.h  Tokenizer.h  TranslationUnit.h  VM.h
libcurt/src/: Bytecode.cpp  Compiler.cpp  Disassembler.cpp  Environment.cpp  Object.cpp  Parser.cpp  Tokenizer.cpp  TranslationUnit.cpp  VM.cpp
src/: Bytecode.cpp  Compiler.cpp  Disassembler.cpp  Object.cpp  Parser.cpp  Tokenizer.cpp  TranslationUnit.cpp  VM.cpp  Value.cpp
tests/: cutest.py
tests/js_suite/: arithmetic.js  arrays.js  block.js  comments.js  functions.js  if.js  loops.js  objects.js  string.js  variables.js
